# web-bones-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Rocket.toml  SETUP.md
app/: Cargo.toml
app/src/: lib.rs  main.rs  model.rs
assets/: app.js  app.wasm  test.txt
data/: Cargo.toml
data/migrations/2017-10-15-181028_create_user_table/: up.sql
data/src/: lib.rs  schema.rs
data/src/model/: mod.rs  user.rs
guard/: Cargo.toml
guard/src/: authenticated.rs  lib.rs
keys/: devcert.pem  devkey.pem
route/: Cargo.toml
route/src/: api.rs  files.rs  index.rs  lib.rs
service/: Cargo.toml
service/src/: lib.rs  user.rs
src/: main.rs
transfer/: Cargo.toml
transfer/src/: lib.rs
web/: Cargo.toml
web/src/: main.rs
