[package]
name = "app"
version = "0.1.0"
authors = ["Daniel Wilkins <danielwilkins8@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
yew = "0.16.2"
transfer = { path = "../transfer"}
http = "0.2.1"
anyhow = "1.0.31"
wasm-bindgen = "0.2.63"

