[package]
name = "data"
version = "0.1.0"
authors = ["Daniel Wilkins"]

[dependencies]
diesel = { version = "0.16", features = ["postgres"] }
diesel_codegen = { version ="0.16", features = ["postgres"] }
rocket = { version = "0.3"}
rocket_codegen = "0.3"
r2d2 = "0.7"
r2d2-diesel = "0.16"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "0.2"
dotenv = "0.10"