[package]
name = "data"
version = "0.1.0"
authors = ["Daniel Wilkins"]

[dependencies]
diesel = { version = "1.0", features = ["postgres"] }
diesel_infer_schema = { version ="1.0", features = ["postgres"] }
rocket = { version = "0.3.6"}
rocket_codegen = "0.3.6"
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "0.2"
dotenv = "0.9.0"