[package]
name = "service"
version = "0.1.0"
authors = ["Daniel Wilkins <danielwilkins8@gmail.com>"]

[dependencies]
rocket = { version = "0.3.1", features = ["tls"] }
diesel = { version = "0.16", features = ["postgres"] }
r2d2 = "0.7"
bcrypt = "0.1"

#Internal Dependencies
data = { path = "../data" }
