[package]
name = "service"
version = "0.1.0"
authors = ["Daniel Wilkins <danielwilkins8@gmail.com>"]

[dependencies]
rocket = { version = "0.3.6", features = ["tls"] }
diesel = { version = "1.0", features = ["postgres"] }
r2d2 = "0.8"
bcrypt = "0.1"

#Internal Dependencies
data = { path = "../data" }
