[package]
name = "service"
version = "0.1.0"
authors = ["Daniel Wilkins <danielwilkins8@gmail.com>"]

[dependencies]
rocket = { version = "0.4.5", features = ["tls"] }
diesel = { version = "1.4", features = ["postgres"] }
r2d2 = "0.8.8"
bcrypt = "0.8.0"

#Internal Dependencies
data = { path = "../data" }
